Added voip innovations feature patch

--- a/images/builder/Dockerfile
+++ b/images/builder/Dockerfile
@@ -6,10 +6,10 @@ ENV     APP kazoo
 ENV     USER $APP
 ENV     HOME /opt/$APP
 
-COPY    build.sh /tmp/
-RUN     /tmp/build.sh
+COPY    build-builder.sh /tmp/
+RUN     /tmp/build-builder.sh
 
-ENV     KAZOO_VERSION=${KAZOO_VERSION:-4.1.41}
+ENV     KAZOO_VERSION=${KAZOO_VERSION:-4.1.43}
 ENV     KAZOO_CONFIGS_VERSION=${KAZOO_CONFIGS_VERSION:-4.1.21}
 ENV     KAZOO_SOUNDS_VERSION=${KAZOO_SOUNDS_VERSION:-4.1.0}
 
